--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.5.2",
+    "sequelize": "^6.32.1"
   },
   "name": "back-end",
   "version": "1.0.0",
