--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.5.2",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.0"
   },
   "name": "back-end",
   "version": "1.0.0",
