Agrega la imagen por default de los usuarios al front-end, y modifica la variable de entorno para que la ruta este correcta. Mueve los logos de la página a una carpeta llamada logos.

--- a/front-end/.env
+++ b/front-end/.env
@@ -1,4 +1,4 @@
 # Url del servidor.
 REACT_APP_SERVER_URL = "http://localhost:3001/"
 # Ruta para el avatar del usuraio.
-REACT_APP_DEFAULT_AVATAR_ROUTE = "/images/avatar/generic_avatar.png"
+REACT_APP_DEFAULT_AVATAR_ROUTE = "/generic_avatar.png"
