--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.5.2",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
